Fix dropdown arrown on select fields on mobile devices

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -14,6 +14,7 @@ $link-hover-decoration: none;
 
 // forms
 $input-bg: $body-bg;
+$custom-select-bg: $body-bg;
 $input-border-color: #000;
 $input-border-radius: 0;
 $input-border-width: 1px;
